Fullscreen gallery legend overlaps with counter [#362 state:resolved]

--- a/theme/_css/slider.less
+++ b/theme/_css/slider.less
@@ -160,7 +160,7 @@ html.active_slider .tip {
 	background-color: rgba(255,255,255,0.6);
 	padding-top: 5px;
 	padding-bottom: 5px;
-	padding-left: 50px;
+	padding-left: 60px;
 	padding-right: 50px;
 	min-height: 20px;
 }
